--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>严振杰</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <title>七夕快乐</title>
 </head>
+
 <body>
-Hello Yuan Yangyang!
+    Hello Yuan Yangyang!
 </body>
+
 </html>
